# libkw

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  format.bash  test.bash  warning_flags.txt
src/: libkw.hpp
test/: basic.cpp  determine_matching_asm.py  expect_failure.py  modal.cpp  modal.py  standalone_include.cpp  warning_flags.py
test/expect_failure/: duplicate_args_correct_arity.cpp  duplicate_args_correct_arity.oracle  kw_syntax_position_error.cpp  kw_syntax_position_error.oracle  kw_tag_in_value_slot.cpp  kw_tag_in_value_slot.oracle  nameless_param.cpp  nameless_param.oracle  too_few_args.cpp  too_few_args.oracle  too_many_args_duplicate_name.cpp  too_many_args_duplicate_name.oracle  too_many_args_new_name.cpp  too_many_args_new_name.oracle  unknown_kw_name.cpp  unknown_kw_name.oracle
